--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: myhelpjuiceapp_production
   username: myhelpjuiceapp
   password: <%= ENV['MYHELPJUICEAPP_DATABASE_PASSWORD'] %>
