--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,7 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  database: myhelpjuiceapp_production
-  username: myhelpjuiceapp
-  password: <%= ENV['MYHELPJUICEAPP_DATABASE_PASSWORD'] %>
+  database: <%= Rails.application.credentials.database[:db] %>
+  username: <%= Rails.application.credentials.database[:username] %>
+  password: "<%= Rails.application.credentials.database[:password] %>"
+  host: localhost
