--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myhelpjuiceapp",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rails/actioncable": "^6.0.0",
